--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         <div class ="service-info">
           <h2>Tires</h2>
           <p>Whether you're looking for new tires, tire rotations, or tire repairs, our team of skilled mechanics are equipped with the expertise and tools necessary to deliver exceptional results.  From winter tire installations and snow tire rotations to summer tire replacements and tire pressure checks, we are committed to keeping you safe on the road, no matter the weather conditions.</p>
+          <p2><li><a href="#pricing">Click here for pricing!</a></li></p2>
         </div>
       </div>
       
@@ -120,6 +121,22 @@
           <p>Leave your worries at the door - our skilled mechanics are here to tackle those pesky minor car repairs for you.</p>
         </div> 
       </div>
+
+
+      
+      <div class = "pricing">
+        <section id = "pricing"> 
+        <div><h1 class="pricing-title">Tire Installation Pricing</h1></div>
+        <div class="price-info">
+        <h2><span>Tire Type</span>    <br>195/65/15 <br>205/55/16 <br>205/60/16 <br>205/65/16 <br>215/60/16 <br>215/55/16 <br>215/45/17 <br>225/50/17 <br>215/45/17 <br>225/65/17 <br>235/65/17 <br>225/45/18 <br>225/40/18 <br>235/45/18 <br>245/40/18</h2>
+        <h3><span>Tire Price</span>   <br>$320 <br>$320 <br>$320 <br>$320 <br>$340 <br>$340 <br>$340 <br>$390 <br>$340 <br>$390 <br>$390 <br>$360 <br>$360 <br>$390 <br>$400</h3>
+        <h4><span>Installation</span>   <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 </h4>
+        <h5><span>Total</span> <br>$380   <br>$380 <br>$380 <br>$380 <br>$400 <br>$400 <br>$400 <br>$450 <br>$400 <br>$450 <br>$450 <br>$420 <br>$420 <br>$450 <br>$460</h4>
+      </div>
+      </div>
+    </section> 
+
+
 
     </div>
   </div>
