--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <section id = "pricing"> 
         <div><h1 class="pricing-title">Tire Installation Pricing</h1></div>
         <div class="price-info">
-        <h2><span>Tire Type</span>    <br>195/65/15 <br>205/55/16 <br>205/60/16 <br>205/65/16 <br>215/65/16 <br>215/60/16 <br>215/55/16 <br>215/45/17 <br>225/50/17 <br>225/45/17 <br>225/65/17 <br>235/65/17 <br>235/40/17 <br>225/45/18 <br>225/40/18 <br>235/45/18 <br>245/40/18</h2>
+        <h2><span>Tire Type</span>    <br>195/65/15 <br>205/55/16 <br>205/60/16 <br>205/65/16 <br>215/65/16 <br>215/60/16 <br>215/55/16 <br>215/45/17 <br>225/50/17 <br>225/45/17 <br>225/65/17 <br>235/65/17 <br>235/45/17 <br>235/40/17 <br>225/45/18 <br>225/40/18 <br>235/45/18 <br>245/40/18</h2>
         <h3><span>Tire Price</span>   <br>$340 <br>$340 <br>$340 <br>$340 <br>$400 <br>$360 <br>$360 <br>$360 <br>$400 <br>$360 <br>$400 <br>$400 <br>$420 <br>$440 <br>$380 <br>$380 <br>$400 <br>$420</h3>
         <h4><span>Installation</span>   <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 <br>$60 </h4>
         <h5><span>Total</span> <br>$400   <br>$400 <br>$400 <br>$400 <br>$460 <br>$420 <br>$420 <br>$420 <br>$460 <br>$420 <br>$460 <br>$460 <br>$480 <br>$500 <br>$440 <br>$440 <br>$460 <br>$480</h4>
